virt01/automated/camera/scrypted/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrypted-web-ingress
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: scrypted.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: scrypted-web-svc
            port:
              number: 11080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - scrypted.k3s.nf.lab
    secretName: scrypted-tls
